--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -16,11 +16,11 @@ on:
 #        description: 'Commit SHA to cherry-pick (only required for patch)'
 #        required: false
 #        type: string
-#      release_version:
-#        description: 'Release version (only required for non-patch)'
-#        default: 'v1.0.0'
-#        required: false
-#        type: string
+      release_version:
+        description: 'Release version (only required for non-patch)'
+        default: 'v1.0.0'
+        required: false
+        type: string
 
 jobs:
   validate-source-branch:
@@ -36,47 +36,34 @@ jobs:
             exit 1
           fi
 
-  bump-version:
-    needs: validate-source-branch
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Authenticate with github
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Bump version
-        id: bump-version
-        uses: release-it/release-it-action@v1
-        with:
-          release_type: ${{ github.event.inputs.release_type }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#  bump-version:
+#    needs: validate-source-branch
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Authenticate with github
 #        run: |
-#          npm install -g standard-version
-#          standard-version --release-as ${{ github.event.inputs.release_type }}
-#          VERSION=$(node -p "require('./package.json').version")
-#          echo "::set-output name=version::$VERSION"
-
-      - name: Push changes
-        run: |
-          git push --follow-tags origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          git config --global user.name 'github-actions[bot]'
+#          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+#          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '16'
+#
+#      - name: Push changes
+#        run: |
+#          git push --follow-tags origin main
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   create-release:
-    needs: bump-version
+    needs: validate-source-branch
     if: ${{ github.event.inputs.release_type != 'patch' }}
     runs-on: ubuntu-latest
     environment:
@@ -100,15 +87,15 @@ jobs:
         run: |
           git fetch origin main
           git checkout main
-          git tag v${{ steps.bump_version.outputs.version }}
-          git push origin v${{ steps.bump_version.outputs.version }}
+          git tag v${{ github.event.inputs.release_type }}
+          git push origin v${{ github.event.inputs.release_type }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create & tag release branch
         run: |
-          git checkout -b release/v${{ steps.bump_version.outputs.version }}
-          git tag v${{ steps.bump_version.outputs.version }}-release
+          git checkout -b release/v${{ github.event.inputs.release_type }}
+          git tag v${{ github.event.inputs.release_type }}-release
           git push origin release/${{ github.event.inputs.release_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -116,10 +103,10 @@ jobs:
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
-          tag_name: v${{ steps.bump_version.outputs.version }}
-          release_name: Release ${{ steps.bump_version.outputs.version }}
+          tag_name: v${{ github.event.inputs.release_type }}
+          release_name: Release ${{ github.event.inputs.release_type }}
           body: |
-            Release ${{ steps.bump_version.outputs.version }}
+            Release ${{ github.event.inputs.release_type }}
           draft: false
           prerelease: false
         env:
