--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -83,19 +83,19 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Tag main branch
-        run: |
-          git fetch origin main
-          git checkout main
-          git tag v${{ github.event.inputs.release_type }}
-          git push origin v${{ github.event.inputs.release_type }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Tag main branch
+#        run: |
+#          git fetch origin main
+#          git checkout main
+#          git tag v${{ github.event.inputs.release_type }}
+#          git push origin v${{ github.event.inputs.release_type }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create & tag release branch
+      - name: Create release branch
         run: |
-          git checkout -b release/v${{ github.event.inputs.release_type }}
-          git tag v${{ github.event.inputs.release_type }}-release
+          git checkout -b release/v${{ github.event.inputs.release_version }}
+          git tag v${{ github.event.inputs.release_version }}
           git push origin release/${{ github.event.inputs.release_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
