--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -94,8 +94,8 @@ jobs:
 
       - name: Create release branch
         run: |
-          git checkout -b release/v${{ github.event.inputs.release_version }}
-          git tag v${{ github.event.inputs.release_version }}
+          git checkout -b release/${{ github.event.inputs.release_version }}
+          git tag ${{ github.event.inputs.release_version }}
           git push origin release/${{ github.event.inputs.release_version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -103,7 +103,7 @@ jobs:
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
-          tag_name: v${{ github.event.inputs.release_type }}
+          tag_name: ${{ github.event.inputs.release_version }}
           release_name: Release ${{ github.event.inputs.release_type }}
           body: |
             Release ${{ github.event.inputs.release_type }}
