--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -36,34 +36,50 @@ jobs:
             exit 1
           fi
 
-#  bump-version:
-#    needs: validate-source-branch
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Authenticate with github
-#        run: |
-#          git config --global user.name 'github-actions[bot]'
-#          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-#          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '16'
-#
-#      - name: Push changes
-#        run: |
-#          git push --follow-tags origin main
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  bump-version:
+    needs: validate-source-branch
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the branch the workflow is run from
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+          persist-credentials: false
+
+      - name: Authenticate with github
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Increment version
+        id: latest-version
+        run: |
+          version=$(git tag --sort=creatordate | tail -1)
+          IFS='.' read -r major minor patch <<< "${version:1}"
+          echo "major=$major" >> $GITHUB_OUTPUT
+          echo "minor=$minor" >> $GITHUB_OUTPUT
+          echo "patch=$patch" >> $GITHUB_OUTPUT
+          echo "Found the latest version: ${versions[0]}.${versions[1]}.${versions[2]}"
+          if [[ "${{ github.event.inputs.release_type }}" == "major" ]]; then
+            major=$((major + 1))
+            minor=0
+            patch=0
+          elif [[ "${{ github.event.inputs.release_type }}" == "minor" ]]; then
+            minor=$((minor + 1))
+            patch=0
+          elif [[ "${{ github.event.inputs.release_type }}" == "patch" ]]; then
+            patch=$((patch + 1))
+          fi
+          new_version="v$major.$minor.$patch"
+          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+          echo "New version: $new_version"
+
 
   create-release:
-    needs: validate-source-branch
+    needs: bump-version
     if: ${{ github.event.inputs.release_type != 'patch' }}
     runs-on: ubuntu-latest
     environment:
@@ -83,15 +99,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-#      - name: Tag main branch
-#        run: |
-#          git fetch origin main
-#          git checkout main
-#          git tag v${{ github.event.inputs.release_type }}
-#          git push origin v${{ github.event.inputs.release_type }}
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Create release branch
         run: |
           git checkout -b release/${{ github.event.inputs.release_version }}
@@ -104,14 +111,14 @@ jobs:
         uses: actions/create-release@v1
         with:
           tag_name: ${{ github.event.inputs.release_version }}
-          release_name: Release ${{ github.event.inputs.release_type }}
+          release_name: Release ${{ github.event.inputs.release_version }}
           body: |
             Release ${{ github.event.inputs.release_type }}
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#
+
 #  cherry-pick-commit:
 #    needs: validate-source-branch
 #    if: ${{ github.event.inputs.release_type == 'patch' }}
