--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -39,6 +39,8 @@ jobs:
   bump-version:
     needs: validate-source-branch
     runs-on: ubuntu-latest
+    outputs:
+      new_version: ${{ steps.increment-version.outputs.new_version }}
     steps:
       - name: Checkout the branch the workflow is run from
         uses: actions/checkout@v4
@@ -55,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Increment version
-        id: latest-version
+        id: increment-version
         run: |
           version=$(git tag --sort=creatordate | tail -1)
           IFS='.' read -r major minor patch <<< "${version:1}"
@@ -101,23 +103,25 @@ jobs:
 
       - name: Create release branch
         run: |
-          git checkout -b release/${{ github.event.inputs.release_version }}
-          git tag ${{ github.event.inputs.release_version }}
-          git push origin release/${{ github.event.inputs.release_version }}
+          git checkout -b release/$RELEASE_VERSION
+          git tag $RELEASE_VERSION
+          git push origin release/$RELEASE_VERSION
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
 
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.event.inputs.release_version }}
-          release_name: Release ${{ github.event.inputs.release_version }}
+          tag_name: $RELEASE_VERSION
+          release_name: Release $RELEASE_VERSION
           body: |
             Release ${{ github.event.inputs.release_type }}
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
 
 #  cherry-pick-commit:
 #    needs: validate-source-branch
