--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -12,10 +12,18 @@ on:
             - major
             - minor
             - patch
+      create_github_release:
+        description: 'Whether to create github release or not'
+        required: true
+        type: choice
+        options:
+          - true
+          - false
       commit_sha:
         description: 'Commit SHA to cherry-pick (only required for patch)'
         required: false
         type: string
+
 
 jobs:
   validate-source-branch:
@@ -109,6 +117,7 @@ jobs:
           RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
 
       - name: Create GitHub release
+        if: ${{ github.event.inputs.create_github_release == 'true' }}
         uses: actions/create-release@v1
         with:
           tag_name: ${{ needs.bump-version.outputs.new_version }}
@@ -150,6 +159,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub release
+        if: ${{ github.event.inputs.create_github_release == 'true' }}
         uses: actions/create-release@v1
         with:
           tag_name: ${{ needs.bump-version.outputs.new_version }}
