Add dependency on release creation

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -120,6 +120,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   deploy:
+    needs: create-release
     runs-on: ubuntu-latest
     environment:
       name: prod
