--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -94,17 +94,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create release branch
-        id: create-release-branch
-        run: |
-          git checkout -b release/$RELEASE_VERSION
-          git tag $RELEASE_VERSION
-          git push origin release/$RELEASE_VERSION
-          echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
-
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
@@ -128,5 +117,41 @@ jobs:
         with:
           ref: ${{ needs.create-release.outputs.release_branch }}
 
+      - name: Create release branch
+        id: create-release-branch
+        run: |
+          git checkout -b release/$RELEASE_VERSION
+          git tag $RELEASE_VERSION
+          git push origin release/$RELEASE_VERSION
+          echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
+
       - name: Deploy to production
         run: echo "Deploying to production..."
+
+  cleanup-failed-deployment:
+    needs: [ create-release, deploy ]
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      RELEASE_VERSION: ${{ needs.bump-version.outputs.new_version }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Delete GitHub release
+        run: |
+          release_id=$(curl -s -H "Authorization: token ${{ github.env.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.env.RELEASE_VERSION }} \
+            | jq -r '.id')
+          if [ "$release_id" != "null" ]; then
+            curl -X DELETE -H "Authorization: token ${{ github.env.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/${{ github.repository }}/releases/$release_id
+            echo "Release ${{ github.env.RELEASE_VERSION }} deleted."
+          else
+            echo "Release ${{ github.env.RELEASE_VERSION }} not found."
+          fi
+      - name: Delete release branch
+        run: |
+          git branch -D ${{ needs.create-release.outputs.release_branch }}
