--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -121,7 +121,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.create-release.outputs.release_branch }}
+          ref: ${{ needs.prepare-release.outputs.release_branch }}
 
       - name: Create GitHub release
         uses: actions/create-release@v1
