--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -98,7 +98,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ github.env.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:$GITHUB_TOKEN@github.com/${{ github.repository }}
 
       - name: Create release branch
         id: create-release-branch
@@ -150,19 +150,19 @@ jobs:
         uses: actions/checkout@v4
       - name: Delete GitHub release
         run: |
-          release_id=$(curl -s -H "Authorization: token ${{ github.env.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.env.RELEASE_VERSION }} \
+          release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/releases/tags/$RELEASE_VERSION \
             | jq -r '.id')
           if [ "$release_id" != "null" ]; then
-            curl -X DELETE -H "Authorization: token ${{ github.env.GITHUB_TOKEN }}" \
+            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
               https://api.github.com/repos/${{ github.repository }}/releases/$release_id
-            echo "Release ${{ github.env.RELEASE_VERSION }} deleted."
+            echo "Release $RELEASE_VERSION deleted."
           else
-            echo "Release ${{ github.env.RELEASE_VERSION }} not found."
+            echo "Release $RELEASE_VERSION not found."
           fi
       - name: Delete Git tag
         run: |
-          git push --delete origin ${{ github.env.RELEASE_VERSION }}
+          git push --delete origin $RELEASE_VERSION
       - name: Delete release branch
         if: ${{ github.event.inputs.delete_release_branch_on_failure }}
         run: |
