--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -105,6 +105,7 @@ jobs:
         continue-on-error: true
         run: |
           git checkout -b release/$RELEASE_VERSION
+          git pull
           git tag $RELEASE_VERSION
           git push origin release/$RELEASE_VERSION
           echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
@@ -162,6 +163,7 @@ jobs:
           fi
       - name: Delete Git tag
         run: |
+          echo "Release version: $RELEASE_VERSION"
           git push --delete origin $RELEASE_VERSION
       - name: Delete release branch
         if: ${{ github.event.inputs.delete_release_branch_on_failure }}
