--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -104,10 +104,13 @@ jobs:
         id: create-release-branch
         continue-on-error: true
         run: |
-          git checkout -b release/$RELEASE_VERSION
-          git pull
-          git tag $RELEASE_VERSION
-          git push origin release/$RELEASE_VERSION
+          if git show-ref --verify --quiet refs/heads/release/$RELEASE_VERSION; then
+            git checkout release/$RELEASE_VERSION
+            git pull
+          else
+            git checkout -b release/$RELEASE_VERSION
+            git push origin release/$RELEASE_VERSION
+          fi
           echo "release_branch=release/$RELEASE_VERSION" >> $GITHUB_OUTPUT
 
       - name: Run tests
