--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -154,20 +154,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Delete GitHub release
         run: |
-          release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            https://api.github.com/repos/${{ github.repository }}/releases/tags/$RELEASE_VERSION \
+          release_id=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ needs.bump-version.outputs.new_version }} \
             | jq -r '.id')
           if [ "$release_id" != "null" ]; then
-            curl -X DELETE -H "Authorization: token $GITHUB_TOKEN" \
+            curl -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               https://api.github.com/repos/${{ github.repository }}/releases/$release_id
-            echo "Release $RELEASE_VERSION deleted."
+            echo "Release ${{ needs.bump-version.outputs.new_version }} deleted."
           else
-            echo "Release $RELEASE_VERSION not found."
+            echo "Release ${{ needs.bump-version.outputs.new_version }} not found."
           fi
       - name: Delete Git tag
         run: |
-          echo "Release version: $RELEASE_VERSION"
-          git push --delete origin $RELEASE_VERSION
+          echo "Release version: ${{ needs.bump-version.outputs.new_version }}"
+          git push --delete origin ${{ needs.bump-version.outputs.new_version }}
       - name: Delete release branch
         if: ${{ github.event.inputs.delete_release_branch_on_failure }}
         run: |
