--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -117,7 +117,7 @@ jobs:
         run: echo "Running tests..."
 
   deploy:
-    needs: prepare-release
+    needs: [prepare-release, bump-version]
     runs-on: ubuntu-latest
     environment:
       name: prod
@@ -143,7 +143,7 @@ jobs:
         run: echo "Deploying to production..."
 
   cleanup-failed-deployment:
-    needs: [ prepare-release, deploy ]
+    needs: [ prepare-release, bump-version, deploy ]
     runs-on: ubuntu-latest
     if: always()
     env:
