--- a/.github/workflows/deploy_to_env.yaml
+++ b/.github/workflows/deploy_to_env.yaml
@@ -51,6 +51,7 @@ jobs:
           fi
 
   deploy:
+    needs: [ validate-source-branch]
     runs-on: ubuntu-latest
     environment:
       name: ${{ github.event.inputs.env }}
